--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+
   
 </head>
 <body>
+  <button (click)="openModal()">Abrir Modal</button>
+
+  <!-- Utilizar el componente de modal Bootstrap -->
+  
   <div>
     <full-calendar
       #calendar
       [options]="calendarOptions"
     ></full-calendar>
+    
+
   </div>
 </body>
 </html>
