--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -5,17 +5,40 @@
     /* Otros estilos personalizados según tus preferencias */
   }
 
-.form-group{
+.formulario{
   display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  margin-bottom: 10px;
-}
+  flex-direction: column;
+  padding: 30px;
 
  
-  
-  
+
+}
+
+.modal-md .modal-dialog {
+  max-width: 80%; /* Ancho personalizado (puedes ajustar el porcentaje) */
+  max-height: 80%; /* Altura personalizada (puedes ajustar el porcentaje) */
+}
+.form-group{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 15px;
+}
+
+.diagonal{
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.botones{
+  display: flex;
+  justify-content: end;
+  gap: 10px;
+}
+
+
+
   
   
   
