--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,36 +1,69 @@
+.barra {
+    width: 250px; /* El ancho que desees */
+    background-color: #BAFF76;
 
+  }
 
 .calendar{
     display: flex;
     justify-content: center;
     text-align: center;
+    text-decoration: none;
     
     
 }
+
+
 .fc-direction-ltr {
     height: 600px;
     direction: ltr;
     width: 800px;
     text-align: left;
-    padding: 50px;
-    background-color: #f5f5f5;
-    border-radius: 40px;
+
+    
 }
 .fc-day {
     width: 40px; /* Ancho de las celdas */
-    height: 40px; /* Alto de las celdas */
+    height: 40px; 
+   
+    
 }
 .fc-event-title {
     font-size: 14px; /* Tamaño del texto */
+ 
+   
 }
 
 /* Cambia el tamaño del título de las celdas */
 .fc-daygrid-day-top .fc-day-number {
     font-size: 16px; /* Tamaño del texto de las celdas */
+  
 }
+
+
+
+  
+.fc-daygrid-day-number {
+    text-decoration: none;
+  }
+  
+a{
+    text-decoration: none;
+}
+
 .calendar-container {
     display: flex;
     justify-content: center; /* Centra horizontalmente */
     align-items: center; /* Centra verticalmente */
     height: 100vh; /* Asegura que el contenedor ocupe toda la altura de la ventana */
+    text-decoration: none;
   }
+.imagen-logo{
+    width: 200px;
+}
+
+ /* botones class */
+ .boton-side{
+    width: 250px;
+    height: 50px;
+ }
