--- a/src/styles.css
+++ b/src/styles.css
@@ -4,4 +4,9 @@
 /* styles.css */
 @import '~primeicons/primeicons.css';
 
+.fc-daygrid-day-number {
+    text-decoration: none;
+  }
 
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
