--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,25 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.p-tabview-nav dl, ol, ul {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.p-tabview .p-tabview-panels {
+  background: #ffffff;
+  padding-left: 5.25rem;
+  border: 0 none;
+  color: #495057;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.p-tabview-panels{
+  height: 600px;
+}
+
+
+
+
