--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -39,7 +39,7 @@
 
       <input  class="personalizado" 
       id="float-input" 
-      type="number"
+      type="text"
       formControlName="direccion"
       placeholder="Direccion"
       pInputText>
@@ -87,7 +87,10 @@
 
 <div class="botones">
   <div class="flex flex-wrap gap-2" >
-    <button pButton pRipple type="button" icon="pi pi-check" class="p-button-rounded"></button>
+    <button pButton 
+    pRipple type="button" icon="pi pi-check" 
+    class="p-button-rounded"
+    (click)="create()"></button>
    
   </div>
   <div class="flex flex-wrap gap-2">
