--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -204,6 +204,11 @@
                         </p-table>
                     </div>
                 </p-tabPanel>
+                <p-tabPanel header="Informe" class="contenido">
+                    <div class="calendar-container">
+                      <app-informe></app-informe>
+                      </div>
+                </p-tabPanel>
 
             </p-tabView>
   </mat-drawer-content>
