--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -32,7 +32,7 @@
      
       <input  class="personalizado" 
       id="float-input" 
-      type="number"
+      type="text"
       formControlName="nit_empresa"
       placeholder="Nit Empresa"
       pInputText>
@@ -43,6 +43,8 @@
       formControlName="direccion"
       placeholder="Direccion"
       pInputText>
+
+
 
   
   </div>
@@ -86,6 +88,14 @@
        formControlName="observacion" 
        pInputTextarea></textarea>
       <label for="float-input">Observacion</label>
+    </span>
+  </div>
+
+  
+  <div class="form-group">
+    <span class="p-float-label">
+        <h5>Registro Fotografico</h5>
+        <input type="file" formControlName="imagen" />
     </span>
   </div>
 
