--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,171 +1,239 @@
-
-/*barra-side-nav */
-
-/* Estilo de la barra de desplazamiento */
+/* Estilos base */
 .barra {
-    width: 250px; /* Ancho personalizado */
-    background-color: #BAFF76; /* Color de fondo personalizado */
+    width: 250px;
+    background-color: #BAFF76;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    transition: width 0.3s;
+}
+.lola{
+    display: none;
   }
-  
-  
 
-/*contenido */
 
-.contenido{
+
+.abrirBarra {
+    display: none;
+}
+
+.abrirBarraTabla{
+    display: none;
+}
+
+.abrirBarras {
+    display: block;
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
+
+.cerrarBarra {
+    display: flex;
+    justify-content: end;
+}
+
+.contenido {
     height: 100%;
 }
 
-
-.calendar{
+.calendar {
     display: flex;
     justify-content: center;
     text-align: center;
     text-decoration: none;
     height: 100%;
-    
-    
 }
-
 
 .fc-direction-ltr {
     height: 550px;
     direction: ltr;
-    width: 860px;
+    width: 300px;
     text-align: left;
-
-    
+    overflow-x: auto;
+    white-space: nowrap;
 }
+
 .fc-day {
-    width: 40px; /* Ancho de las celdas */
-    height: 40px; 
-   
-    
+    width: 40px;
+    height: 40px;
 }
+
 .fc-event-title {
-    font-size: 14px; /* Tamaño del texto */
- 
-   
+    font-size: 14px;
 }
 
-/* Cambia el tamaño del título de las celdas */
 .fc-daygrid-day-top .fc-day-number {
-    font-size: 16px; /* Tamaño del texto de las celdas */
-  
+    font-size: 16px;
 }
 
-
-
-  
 .fc-daygrid-day-number {
     text-decoration: none;
-  }
-  
-a{
+}
+
+a {
     text-decoration: none;
 }
 
 .calendar-container {
     display: flex;
-    align-items: center; /* Centra verticalmente */
-    text-decoration: none;
-  }
-.imagen-logo{
-    width: 200px;
+    align-items: center;
 }
 
- /* botones class */
- .boton-side{
-    width: 250px;
+.imagen-logo {
+    width: 100%;
+    max-width: 200px;
+}
+
+/* botones class */
+.boton-side {
+    width: 100%;
     height: 50px;
     background-color: #BAFF76;
- }
+}
 
- .boton-agregar-div{
+.boton-agregar-div {
     display: flex;
     align-items: center;
     justify-content: center;
-    
- }
+}
 
- .boton-agregar{
+.boton-agregar {
     background-color: white;
     color: black;
     display: flex;
     gap: 4px;
-
-    border:  1px solid black;
+    border: 1px solid black;
     height: 50px;
-    margin-top: 30px;
-    margin-bottom: 21px;
- }
- .boton-agregar:hover{
-    background-color:#F4F6F6 ; 
-    border: black;
- }
- .boton-agregar:active{
-    border:   1px solid black; 
- }
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
- .boton-mes{
-    width: 254px;
+.boton-agregar:hover {
+    background-color: #F4F6F6;
+    border: 1px solid black;
+}
+
+.boton-agregar:active {
+    border: 1px solid black;
+}
+
+.boton-mes {
+    width: 100%;
     display: flex;
     justify-content: center;
-    background-color:  #BAFF76;
+    background-color: #BAFF76;
     border: none;
     color: black;
     font-size: 20px;
- }
-
- .boton-mes:hover{
-    background-color:  #D1FFA0;
- }
-
- .boton-mes:active,
- .boton-mes:focus {
-  outline: none; /* Elimina el marco de enfoque */
-  box-shadow: none; /* Elimina cualquier sombra o marco en clic */
 }
 
+.boton-mes:hover {
+    background-color: #D1FFA0;
+}
 
+.boton-mes:active,
+.boton-mes:focus {
+    outline: none;
+    box-shadow: none;
+}
 
+.boton-mes-rojo{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: red;
+    border: none;
+    color: white;
+    font-size: 20px;
+}
 
+.boton-mes-rojo:hover{
+    background-color: #F05680;
+}
 
- /*icons*/
- .icons{
+/* icons */
+.icons {
     width: 30px;
- }
+}
 
- /*card*/
-.card{
+/* card */
+.card {
     max-height: 500px;
     overflow-y: scroll;
-    max-width: 1000px;
+    max-width: 100%;
 }
- /*botones update y dalete yable*/
- .button-function{
+
+/* botones update y delete y table */
+.button-function {
     display: flex;
     height: 30px;
-    width: 120px;
+    width: 100%;
     gap: 10px;
-    
- }
+}
 
- .butto{
-    height: 30px;
- }
+.butto,
+.butto-delete {
+    flex: 1;
+}
 
- .butto-delete{
+.butto-delete {
     background-color: red;
- }
+}
 
- .fc-event {
-   border: none; /* Elimina el borde */
-   /* Otros estilos personalizados, como el fondo o el color de fuente */
- }
+.fc-event {
+    border: none;
+}
 
+.contenido-con-margen {
+    transition: margin-left 0.3s;
+}
 
- 
+.con-margen {
+    margin-left: 80px;
+}
+
+/* Media query para pantallas pequeñas (ejemplo: teléfonos) */
+@media only screen and (max-width: 768px) {
+
+   .logo{
+      display: flex;
+      justify-content: center;
+   }
+
+    .barra {
+        width: 100%;
+    }
+
+    .abrirBarra {
+        display: flex;
+    }
+
+    .abrirBarras {
+        width: 30px;
+        height: 30px;
+    }
+
+    .con-margen {
+        margin-left: 0;
+    }
+
+  
+
+}
+
+/* Media query para pantallas medianas (ejemplo: tablets) */
+@media only screen and (min-width: 769px) {
+   .fc-direction-ltr {
+      min-width: 980px;
+       max-width:980px; 
+   }
+}
+
+/* Media query para pantallas grandes (ejemplo: computadoras) */
+@media only screen and (min-width: 1025px) {
+}
