--- a/src/app/informe/informe.component.css
+++ b/src/app/informe/informe.component.css
@@ -1,66 +1,110 @@
-/* Estilos para el contenedor principal de las tarjetas */
-.outer-container {
-    max-height: 80vh; /* Altura máxima relativa al 80% de la altura de la ventana */
-    overflow-y: auto; /* Barras de desplazamiento vertical si es necesario */
-  }
-  
-  /* Estilos para el contenedor de las tarjetas */
+
+.barra-menu{
+  display: flex;
+  justify-content: center;
+  align-items:center ;
+  width: 100%;
+  height: 60px;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  overflow-y: auto; 
+  max-height: 500px; 
+}
+
+.agregarInforme button {
+  font-size: 20px;
+  background-color: #f5f5f5;
+  border: none; 
+  border-radius: 50%; 
+  width: 50px; 
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer; 
+  outline: none; 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease; 
+}
+
+.agregarInforme button:hover {
+  background-color: #ccc;
+}
+
+
+.buttons-container {
+  position: absolute;
+  top: 5px; 
+  right: 5px; 
+  display: flex;
+  gap: 2px;
+  flex-direction: column; 
+  align-items: flex-end; 
+}
+
+.p-button-tiny {
+  font-size: 12px; 
+  width: 10px; 
+  height: 10px; 
+  padding: 0; 
+}
+
+.p-button-rounded {
+  border-radius: 50%;
+  width: 30px; 
+  height: 30px;  
+}
+
+.card {
+  width: 300px;
+  height: 300px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin: 10px;
+  padding: 15px;
+  background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden; 
+}
+
+
+.informe {
+  flex: 1; 
+  overflow: hidden;
+}
+
+
+.observacion {
+  max-height: 75px; 
+  overflow-y: auto;
+  margin-bottom: 10px;
+}
+
+
+@media only screen and (min-width: 1425px) {
   .card-container {
     display: flex;
-    flex-wrap: wrap; /* Las tarjetas se envuelven a la siguiente fila */
-    justify-content: flex-start; /* Alineación a la izquierda */
-    gap: 10px; /* Espacio entre las tarjetas */
-    max-height: 500px; /* Altura máxima del contenedor */
-    overflow-y: auto; /* Barras de desplazamiento vertical si es necesario */
+    flex-wrap: wrap; 
+    align-items: center;
+    overflow-y: auto; 
+    max-height: 80vh; 
   }
-  .buttons-container {
-    position: absolute;
-    top: 5px; /* Ajusta la posición vertical según tus necesidades */
-    right: 5px; /* Ajusta la posición horizontal según tus necesidades */
+}
+
+@media only screen and (max-width: 768px) {
+
+  .card-container {
     display: flex;
-    gap: 2px;
-    flex-direction: column; /* Coloca los botones en una columna */
-    align-items: flex-end; /* Alineación a la derecha */
+    flex-wrap: wrap;
+    align-items: center;
+    overflow-y: auto;
+    max-height: 700px; 
   }
   
-  .p-button-tiny {
-    font-size: 12px; /* Tamaño de fuente más pequeño */
-    width: 10px; /* Ancho más pequeño */
-    height: 10px; /* Altura más pequeña */
-    padding: 0; /* Sin relleno */
-  }
-  
-  .p-button-rounded {
-    border-radius: 50%;
-    width: 30px; /* Ancho más pequeño */
-    height: 30px;  /* Borde redondeado para que parezcan botones pequeños */
-  }
-  
-  /* Estilos para todas las tarjetas */
-  .card {
-    width: 300px; /* Tamaño fijo para todas las tarjetas */
-    height: 300px; /* Tamaño fijo para todas las tarjetas */
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin: 10px;
-    padding: 15px;
-    background-color: #f5f5f5;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden; /* Ocultar contenido que desborde */
-  }
-  
-  /* Estilos para el contenido dentro de las tarjetas */
-  .informe {
-    flex: 1; /* El contenido se expande verticalmente */
-    overflow: hidden; /* Ocultar contenido que desborde */
-  }
-  
-  /* Estilos para la observación con scroll si es largo */
-  .observacion {
-    max-height: 75px; /* Altura máxima antes de mostrar las barras de desplazamiento */
-    overflow-y: auto; /* Barras de desplazamiento vertical si es necesario */
-    margin-bottom: 10px; /* Agregar margen inferior para evitar superposición */
-  }
-  
+}
