--- a/src/app/informe/informe.component.html
+++ b/src/app/informe/informe.component.html
@@ -1,7 +1,11 @@
 <div class="barra-menu">
-    <button (click)="openModalInforme()">abrir</button>
+    <div class="agregarInforme">
+        <button (click)="openModalInforme()">+</button>
+    </div>
+   
 </div>
 <div class="card-container">
+   
 <div *ngFor="let informe of informes">
     <div class="card">
         <div class="informe">
