--- a/src/app/informe/modal-informe/modal-informe.component.html
+++ b/src/app/informe/modal-informe/modal-informe.component.html
@@ -49,6 +49,17 @@
               <label for="float-input">Observacion</label>
             </span>
           </div>
+
+          <div class="form-group">
+            <span class="p-float-label">
+                <h5>Basic</h5>
+                <p-fileUpload mode="basic" name="demo[]" url="./upload.php" accept="image/*" [maxFileSize]="1000000" ></p-fileUpload>
+            </span>
+          </div>
+
+          
+          
+
   
     <div >
       <div class="buttons-container">
